# Blogel

./: .gitignore  CMakeLists.txt  Makefile  blogel_app_hashmin.h  blogel_app_pagerank1.h  blogel_app_sssp.h  blogel_pagerank_vorPart.h  blogel_sim.h  blogel_sim_vorPart.h  blogel_sssp_STRRnd1.h  blogel_sssp_vorPart.h  cc.cpp  cc_vc.cpp  conf  conf12  conf16  conf20  conf24  conf32  conf4  conf8  go.sh  pagerank.cpp  pagerank_part.cpp  part.cpp  pr_vc.cpp  pregel_app_hashmin.h  pregel_app_pagerank.h  pregel_app_sssp.h  run  run.cpp  run_vorPart.cpp  sim.cpp  sim_part.cpp  sssp.cpp  sssp_part.cpp  sssp_vc.cpp
blogel/: BAssign.h  BGlobal.h  BMessageBuffer.h  BType.h  BVecs.h  BVertex.h  BWorker.h  STRPart.h  STRPartR2.h  VMessageBuffer.h  Voronoi.h
hashmin/: run
utils/: TeraSort.h  communication.h  ydhdfs.h
